--- a/client/css/style.css
+++ b/client/css/style.css
@@ -105,6 +105,10 @@ body {
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
 
+#view{
+  padding-top: 50px;
+}
+
 body > .container {
   padding: 53px 15px 60px 15px;
 }
@@ -366,6 +370,20 @@ body > .container {
 
 #brushing-timeline-container{
   background-color: #FAFAFA;
+}
+
+.sticky-container-fixed{
+  padding-top: 50px;
+  background-color: #FAFAFA;
+  position: fixed;
+  width: 100%;
+  margin: 0;
+  left: 0;
+  top: 0;
+  z-index: 10;
+-webkit-box-shadow: 0px 3px 4px -3px rgba(0,0,0,0.38);
+-moz-box-shadow: 0px 3px 4px -3px rgba(0,0,0,0.38);
+box-shadow: 0px 3px 4px -3px rgba(0,0,0,0.38);
 }
 
 /* stream */
