--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -46,10 +46,32 @@
   <div class="row">
     <div class="col-sm-12">
       <br>
-      <h4>Comparison of {{entities.sourceEntity.selected.RICname}} and {{entities.targetEntity.selected.RICname}} trade statistics</h4>
-      <comparison-timeline ng-data="timelineData" start-date="selectedMinDate" end-date="selectedMaxDate"></comparison-timeline>
       <br>
       <h4>Comparison of {{entities.sourceEntity.selected.RICname}} and {{entities.targetEntity.selected.RICname}} trade statistics</h4>
+      <div class="legend">
+        <div class="legend-item">
+          <div class="line diff-import"></div>
+          ( {{entities.sourceEntity.selected.RICname}} imports - {{entities.targetEntity.selected.RICname}} exports ) / {{entities.sourceEntity.selected.RICname}} imports
+        </div>
+        <div class="legend-item">
+          <div class="line diff-export"></div>
+          ( {{entities.sourceEntity.selected.RICname}} exports - {{entities.targetEntity.selected.RICname}} imports ) / {{entities.sourceEntity.selected.RICname}} exports
+        </div>
+      </div>
+      <comparison-timeline ng-data="timelineData" start-date="selectedMinDate" end-date="selectedMaxDate"></comparison-timeline>
+      <br>
+      <br>
+      <h4>Comparison of {{entities.sourceEntity.selected.RICname}} and {{entities.targetEntity.selected.RICname}} trade statistics</h4>
+      <div class="legend">
+        <div class="legend-item">
+          <div class="line diff-import"></div>
+          ( {{entities.targetEntity.selected.RICname}} imports - {{entities.sourceEntity.selected.RICname}} exports ) / {{entities.targetEntity.selected.RICname}} imports
+        </div>
+        <div class="legend-item">
+          <div class="line diff-export"></div>
+          ( {{entities.targetEntity.selected.RICname}} exports - {{entities.sourceEntity.selected.RICname}} imports ) / {{entities.targetEntity.selected.RICname}} exports
+        </div>
+      </div>
       <comparison-timeline ng-data="timelineData" start-date="selectedMinDate" end-date="selectedMaxDate" reverse="true"></comparison-timeline>
     </div>
   </div>
