--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -79,7 +79,7 @@
     <div class="col-sm-9">
       <div class="row">
         <div class="col-sm-12">
-          <div class="barchart-country" barchart-country></div>
+          <div class="partners-histogram" partners-histogram></div>
         </div>
       </div>
     </div>
