--- a/client/css/style.css
+++ b/client/css/style.css
@@ -381,6 +381,10 @@ h4{
           box-shadow: 0px 3px 4px -3px rgba(0,0,0,0.38);
 }
 
+.sticky-placeholder{
+  height: 150px;
+}
+
 /* Legend */
 
 .legend .legend-item{
