--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -36,25 +36,15 @@
   <div id="select-doubleChart" class="row">
     <div class="col-sm-3">
       <div class="row">
-        <div class="select-dropdown col-sm-12">
-          <ui-select ng-model="entities.sourceEntity.selected" theme="bootstrap">
-            <match placeholder="Search and select a Country...">{{$select.selected.RICname}}</match>
-            <choices repeat="item in reportingEntities | filter: $select.search">
-              <div ng-bind-html="item.RICname | highlight: $select.search"></div>
-            </choices>
-          </ui-select>
-        </div>
-      </div>
-      <div class="row">
         <div class="col-sm-12">
           <p class="filter">filtered by</p>
           <div class="btn-group radio-country">
-            <label class="btn btn-sm btn-default" ng-model="filter" btn-radio="'all'" uncheckable>all</label>
-            <label class="btn btn-sm btn-default" ng-model="filter" btn-radio="'city/part_of'" uncheckable>city/part_of</label>
-            <label class="btn btn-sm btn-default" ng-model="filter" btn-radio="'colonial_area'" uncheckable>colonial_area</label>
-            <label class="btn btn-sm btn-default" ng-model="filter" btn-radio="'country'" uncheckable>country</label>
-            <label class="btn btn-sm btn-default" ng-model="filter" btn-radio="'geographical_area'" uncheckable>geographical_area</label>
-            <label class="btn btn-sm btn-default" ng-model="filter" btn-radio="'group'" uncheckable>group</label>
+            <label class="btn btn-sm btn-default" ng-model="filter" btn-radio="'all'" uncheckable>All</label>
+            <label class="btn btn-sm btn-default" ng-model="filter" btn-radio="'city/part_of'" uncheckable>City</label>
+            <label class="btn btn-sm btn-default" ng-model="filter" btn-radio="'colonial_area'" uncheckable>Colonial area</label>
+            <label class="btn btn-sm btn-default" ng-model="filter" btn-radio="'country'" uncheckable>Country</label>
+            <label class="btn btn-sm btn-default" ng-model="filter" btn-radio="'geographical_area'" uncheckable>Geographical area</label>
+            <label class="btn btn-sm btn-default" ng-model="filter" btn-radio="'group'" uncheckable>Group</label>
           </div>
           <p class="filter">ordered by</p>
           <div class="btn-group radio-country">
