--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -28,6 +28,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
+        <bilateral-title id="alt-title" style="display:none;"></bilateral-title>
         <brushing-timeline
           ng-data="timelineData"
           start-date="selectedMinDate"
