--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -11,6 +11,7 @@
   <div class="container">
     <div class="row" >
       <div class="col-sm-12">
+        <country-title id="alt-title" style="display:none;"></country-title>
         <brushing-timeline
           ng-data="timelineData"
           start-date="selectedMinDate"
