--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -81,7 +81,7 @@
       <h3 class="subtitle">select up to 5 partners:</h3>
     </div>
     <div class="col-sm-9">
-      <h3 class="subtitle">Trade of {{entities.sourceEntity.selected.RICname}} with <span ng-repeat="country in reporting">{{country.RICname}}<span ng-if="!$last">, </span></span>, {{startDate}} – {{endDate}}, in {{actualCurrency}}</h3>
+      <h3 class="subtitle">Trade of {{entities.sourceEntity.selected.RICname}} with <span ng-repeat="country in reporting">{{country.RICname}}<span ng-if="!$last">, </span></span>, {{selectedMinDate}} – {{selectedMaxDate}}, in {{actualCurrency}}</h3>
     </div>
   </div>
   <div id="select-lineChart" class="row">
