--- a/client/partials/listworld.html
+++ b/client/partials/listworld.html
@@ -1,3 +1,3 @@
 <div id="list-world-container">
-  <alert ng-repeat="elm in reporting" type="'custom'" close="removeReporting(elm)" ng-style="{color:lineColors[$index]}">{{elm.RICname}}</alert>
+  <alert ng-repeat="elm in reporting" type="'custom'" close="removeReporting(elm)" ng-style="{color:elm.color}">{{elm.RICname}}</alert>
 </div>
