--- a/client/partials/bilateralTitle.html
+++ b/client/partials/bilateralTitle.html
@@ -1,7 +1,7 @@
 <h4>
-  Trade reported by
+  Trade between
   <inline-select-country ng-model="entities.sourceEntity.selected" list="reportingEntities"></inline-select-country>
-  with
+  and
   <inline-select-country ng-model="entities.targetEntity.selected" list="reportingEntities"></inline-select-country>
   - From
   <inline-select-year ng-model="selectedMinDate" list="rawYearsRange_forInf"></inline-select-year>
